--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,16 +15,16 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">{{ site.title | default: site.github.repository_name }}</h1>
+        <a href="#"><h1 class="header">{{ site.title | default: site.github.repository_name }}</h1></a>
         <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
 
-        <ul>
-          {% if site.show_downloads %}
-            <li class="download"><a class="buttons" href="{{ site.github.zip_url }}">Download ZIP</a></li>
-            <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Download TAR</a></li>
-          {% endif %}
-          <li><a class="buttons github" href="{{ site.github.repository_url }}">View On GitHub</a></li>
-        </ul>
+        <p>
+          {% if site.menu %}
+          {% for item in site.menu %}
+            <a class="h1" href="{{ item.url }}">- {{ item.value }}</a><br>
+          {% endfor %}
+          {% endif %}   
+        </p>
 
         {% if site.github.is_project_page %}
           <p class="header">This project is maintained by <a class="header name" href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
